# daisy-mic

00_setup/: autotuner.fzz  readme.md
03_boiler_plate/: Cargo.toml
03_boiler_plate/.cargo/: config.toml
03_boiler_plate/src/: main.rs
05_pass_through/src/: main.rs
06_autotune/: Cargo.toml  Embedded.toml
06_autotune/src/: autotune.rs  main.rs  ring_buffer.rs
06_autotune_debug/: Cargo.toml  Embedded.toml
06_autotune_debug/.zed/: settings.json
completed_02_embedded/: Cargo.toml  readme.rs
completed_03_boiler_plate/: Cargo.toml
completed_03_boiler_plate/src/: main.rs
completed_04_blink_probably_skip/: Cargo.toml
completed_04_blink_probably_skip/src/: main.rs
completed_05_pass_through/src/: main.rs
completed_06_autotune/: Cargo.toml
completed_06_autotune/.cargo/: config.toml
completed_06_autotune/.zed/: settings.json
completed_06_autotune/src/: main.rs
completed_06_autotune_debug/src/: main.rs  ring_buffer.rs
