[package]
name = "daisy-mic"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rtic = "1.1.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-rtt-target = { version = "0.1.3" }
log = "0.4.21"
panic-halt = "0.2.0"
stm32h7xx-hal = { version = "0.16.0", features = [
    "stm32h750v",
    "rt",
    "fmc",
    "xspi",
    "sdmmc",
    "sdmmc-fatfs",
    "usb_hs",
] }
stm32-fmc = "0.3.0"
rtt-target = "0.5.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
panic-itm = "0.4.2"
cortex-m-log = { version = "0.8.0", features = [
    "itm",
    "semihosting",
    "log-integration",
] }
micromath = "2.1.0"
microfft = "0.6"
libm = "0.2.8"
fugit = "0.3.7"
libdaisy = { git = "https://github.com/nathansbradshaw/libdaisy-rust.git", features = [
    "log-rtt",
], commit = "f08c01fd8f950675c6c1051c2310c1cdf7309d8b" }
synthphone_vocals = { path = "/home/nathan/Documents/GitHub/synthphone_vocals/", default-features = false, features = [
    "embedded",
] }

[profile.dev]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size in flash
incremental = false
lto = true          # better optimizations
opt-level = "s"     # optimize for binary size

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size in flash
lto = true        # better optimizations
opt-level = "s"   # optimize for binary size
