[package]
name = "daisy-mic"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rtic = "1.1.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
log = "0.4.21"
stm32h7xx-hal = { version = "0.16.0", features = [
    "stm32h750v",
    "rt",
    "fmc",
    "xspi",
    "sdmmc",
    "sdmmc-fatfs",
    "usb_hs",
] }
libdaisy = { git = "https://github.com/nathansbradshaw/libdaisy-rust.git", features = [
    "log-rtt",
], commit = "f08c01fd8f950675c6c1051c2310c1cdf7309d8b" }
synthphone_vocals = { git = "https://github.com/nathansbradshaw/synthphone_vocals.git", commit = "6d6c07177ff07fd44b6d48b4560dbe85840c93fe" }


[profile.dev]
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size in flash
incremental = false
lto = true          # better optimizations
opt-level = "s"     # optimize for binary size

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size in flash
lto = true        # better optimizations
opt-level = "s"   # optimize for binary size
